# tbcompress

./: .gitignore  baseline_1000.json  baseline_100000.json  baseline_1000000.json  baseline_stats.json  bench_streaming_dataset.py  benchmark_profile.prof  benchmark_profile_default.prof  benchmark_tablebase.py  benchmark_training.py  best_tablebase_model.pth  code.md  compressor.py  download_cmd.txt  eval_full_tablebase.py  head.pgn  kasparov_the_world_1999.pgn  lightweight_tablebase_classifier.pt  lightweight_tablebase_classifier.pth  llm.py  model_quantization.py  new_stats_100000.json  new_stats_1000001.json  o3.py  o3_stats_1000.json  o3_stats_100000.json  outputs.pt  pgn_converter.py  profile_output.prof  profile_results.prof  royall_game_head.pgn.txt  royall_game_kasparov_the_world_1999.pgn.txt  royall_game_output.txt  royall_game_output_head.txt  simple_test.py  stats_1000.json  stats_100000.json  tablebase_classifier.py  tbbench.py  tems.py  (+7 more)
models/: KBBBvK.pth  KBBNvK.pth  KBBPvK.pth  KBBvKN.pth  KBBvKP.pth  KBBvKR.pth  KBNNvK.pth  KBNPvK.pth  KBNvK.pth  KBNvKN.pth  KBNvKQ.pth  KBPPvK.pth  KBPvKN.pth  KBPvKP.pth  KBPvKR.pth  KBvK.pth  KBvKN.pth  KBvKP.pth  KNNNvK.pth  KNNvK.pth  KNNvKB.pth  KNNvKN.pth  KNNvKP.pth  KNNvKQ.pth  KNNvKR.pth  KNPPvK.pth  KNPvK.pth  KNPvKN.pth  KNPvKR.pth  KPPvK.pth  KPPvKB.pth  KPPvKN.pth  KPvK.pth  KPvKP.pth  KQBPvK.pth  KQBvK.pth  KQBvKN.pth  KQBvKP.pth  KQBvKQ.pth  KQNPvK.pth  (+45 more)
models_20250503_112430/: KBBvK.pth  KBBvKB.pth  KBBvKQ.pth  KBNvKB.pth  KBNvKP.pth  (+56 more)
rust/rust_src/: Cargo.toml
rust/rust_src/src/: board_gen.rs  lib.rs
(+13 files in other folders)
